--- a/home.html
+++ b/home.html
@@ -1,238 +1,295 @@
-<!-- Web Page for HTML and CN Tools Learning -->
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>HTML & CN Learning Tool</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <title>BookNext – Your Online Bookstore</title>
 
-    <!-- Fonts & Bootstrap -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet">
+    <!-- Bootstrap 5 CDN -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
+
+    <!-- Font Awesome -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
 
     <style>
         body {
             font-family: 'Poppins', sans-serif;
-            background-color: rgb(232, 231, 226);
+            background: linear-gradient(135deg,
+                    #1a1a1a 0%,
+                    /* very dark gray */
+                    rgb(12, 14, 24) 50%,
+                    #0f1013 100%
+                    /* pure black */
+                );
+            color: white;
+
         }
-          .navbar {
-      box-shadow: 0 4px 12px rgba(0, 0, 0, 0.1);
-      animation: fadeInDown 0.6s ease-out;
-    }
 
-    @keyframes fadeInDown {
-      from {
-        opacity: 0;
-        transform: translateY(-20px);
-      }
-      to {
-        opacity: 1;
-        transform: translateY(0);
-      }
-    }
+        .hero {
+            color: white;
+            padding: 100px 20px;
+            text-align: center;
+        }
 
-    /* Brand hover animation */
-    .navbar-brand {
-      font-weight: 600;
-      transition: transform 0.3s ease;
-    }
+        .hero h1 {
+            font-size: 3rem;
+        }
 
-    .navbar-brand:hover {
-      transform: scale(1.05) rotate(-2deg);
-    }
+        .hero p {
+            font-size: 1.2rem;
+        }
 
-    /* Animated underline for nav links */
-    .nav-link {
-      position: relative;
-      transition: color 0.3s ease;
-    }
-
-    .nav-link::after {
-      content: '';
-      position: absolute;
-      width: 0;
-      height: 2px;
-      left: 0;
-      bottom: 0;
-      background-color: orange;
-      transition: width 0.3s ease;
-    }
-
-    .nav-link:hover::after,
-    .nav-link.active::after {
-      width: 100%;
-    }
-
-    .nav-link:hover {
-      color: orange;
-    }
-
-        .carousel-item img {
-            width: 600px;
-            height: 300px;
+        .book-card img {
+            height: 250px;
             object-fit: cover;
-            margin: 0 auto;
         }
 
-        .feature-icon {
-            font-size: 2rem;
-            color: #0d6efd;
+
+
+        .navbar-nav .nav-link {
+            transition: color 0.3s ease;
         }
 
-        footer {
-            background-color: #f8f9fa;
-            padding: 1rem 0;
+        .navbar-nav .nav-link:hover {
+            color: #ffc107;
+            /* Bootstrap warning color */
         }
 
-        section h3 {
-            border-bottom: 2px solid #0d6efd;
-            display: inline-block;
-            padding-bottom: 0.3rem;
-            margin-bottom: 1.5rem;
+        .swiper-slide {
+            display: flex;
+            justify-content: center;
+        }
+
+        .book-card {
+            width: 100%;
+            max-width: 300px;
+            transition: transform 0.3s ease;
+        }
+
+        .book-card:hover {
+            transform: scale(1.03);
+        }
+
+        .about-section {
+            background: linear-gradient(135deg,
+                    #1a1a1a 0%,
+                    /* very dark gray */
+                    rgb(53, 58, 88) 50%,
+                    #0f1013 100%
+                    /* pure black */
+                );
+            color: #f0f0f0;
+            /* light text for contrast */
+            padding: 60px 20px;
+            border-radius: 15px;
+            width: 100%;
         }
     </style>
 </head>
 
 <body>
+    <!-- Bootstrap Icons -->
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+    <!-- Swiper CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.css" />
 
-    <!-- Header -->
-    <header class="bg-primary py-4 rounded-3 shadow-sm d-flex justify-content-center align-items-center gap-3 mt-2">
-        <i class="bi bi-laptop fs-1 text-white"></i>
-        <p class="fs-2 text-white mb-0">Web Technology and Computer Networks LAB</p>
-    </header>
-    <br>
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light shadow-sm">
-        <div class="container">
-            <a class="navbar-brand" href="#">Learning Tool</a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarMenu">
-                <span class="navbar-toggler-icon"></span>
-            </button>
+    <!-- Swiper JS -->
+    <script src="https://cdn.jsdelivr.net/npm/swiper@11/swiper-bundle.min.js"></script>
 
-            <div class="collapse navbar-collapse" id="navbarMenu">
-                <ul class="navbar-nav ms-auto mb-2 mb-lg-0">
-                    <li class="nav-item">
-                        <a class="nav-link" href="home.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active" href="experiment.html">Experiments</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="syllabus.html">Syllabus</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="about.html">About Me</a>
-                    </li>
-                    
-                </ul>
-            </div>
+
+
+
+    <!-- Hero Section -->
+    <section class="hero position-relative text-white d-flex justify-content-center align-items-center text-center"
+        style="height: 800px;">
+        <!-- Background video -->
+        <video autoplay muted loop playsinline class="position-absolute top-0 start-0 w-100 h-100 object-fit-cover"
+            style="z-index: -1;">
+            <source src="assets/bg_vd.mp4" type="video/mp4" />
+            Your browser does not support the video tag.
+        </video>
+
+        <!-- Content on top -->
+        <div class="z-1">
+            <h1 class="display-4 fw-bold">Welcome to BookNext</h1>
+            <p class="lead">Your one-stop destination for every kind of book</p>
+            <a href="login.html" class="btn btn-light btn-lg mt-4">Browse Books</a>
+        </div>
+    </section>
+    <nav class="navbar navbar-expand-lg navbar-primary text-light sticky-top shadow-sm px-4 rounded-1">
+        <a class="navbar-brand fw-semibold d-flex align-items-center text-light" href="#">
+            <i class="bi bi-book-half text-light me-2 fs-4"></i> BookNext
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse" id="navbarNav">
+            <ul class="navbar-nav ms-auto gap-3 text-light">
+                <li class="nav-item text-light">
+                    <a class="nav-link active text-light" href="#home"><i class="bi bi-house-door me-1"></i>Home</a>
+                </li>
+                <li class="nav-item text-light">
+                    <a class="nav-link text-light" href="#books "><i class="bi bi-book me-1"></i>Books</a>
+                </li>
+                <li class="nav-item text-light">
+                    <a class="nav-link text-light" href="#about"><i class="bi bi-info-circle me-1"></i>About</a>
+                </li>
+                <li class="nav-item text-light">
+                    <a class="nav-link text-light" href="#contact"><i class="bi bi-envelope me-1"></i>Contact</a>
+                </li>
+                <li class="nav-item text-light">
+                    <a class="nav-link" href="#"><i class="bi bi-cart3 fs-5"></i></a>
+                </li>
+            </ul>
         </div>
     </nav>
 
-    <!-- Intro Section -->
-    <section class="container my-5 text-center">
-        <h2>Welcome to HTML & CN Learning Tool</h2>
-        <p class="text-muted">This platform provides a structured and practical way to learn Web Technologies (HTML, CSS, Bootstrap) and Computer Networks through interactive content and hands-on examples.</p>
-    </section>
-
-    <!-- Carousel -->
-    <section class="container mb-5 d-flex justify-content-center">
-        <div id="carouselExampleIndicators" class="carousel slide w-100" data-bs-ride="carousel" style="max-width: 800px;">
-            <div class="carousel-indicators">
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="0" class="active"
-                    aria-current="true"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="1"></button>
-                <button type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide-to="2"></button>
-            </div>
-
-            <div class="carousel-inner">
-                <div class="carousel-item active">
-                    <img src="assets/img1.jpg" class="d-block w-100" alt="Slide 1">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img2.jpg" class="d-block w-100" alt="Slide 2">
-                </div>
-                <div class="carousel-item">
-                    <img src="assets/img3.jpeg" class="d-block w-100" alt="Slide 3">
-                </div>
-            </div>
-
-            <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon"></span>
-                <span class="visually-hidden">Previous</span>
-            </button>
-            <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleIndicators" data-bs-slide="next">
-                <span class="carousel-control-next-icon"></span>
-                <span class="visually-hidden">Next</span>
-            </button>
-        </div>
-    </section>
-
-    <!-- Web Tech Features -->
+    <!-- Featured Books -->
     <section class="container my-5">
-        <h3 class="text-center">Web Technology Topics</h3>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-code-slash feature-icon mb-2"></i>
-                    <h5>HTML Basics</h5>
-                    <p class="text-muted">Structure web pages using tags, elements, and attributes.</p>
+        <h2 class="text-center mb-4">Featured Books</h2>
+
+        <div class="swiper mySwiper">
+            <div class="swiper-wrapper">
+
+                <!-- Slide 1 -->
+                <div class="swiper-slide">
+                    <div class="card book-card shadow-sm">
+                        <img src="assets/img1.jfif" class="card-img-top" alt="Book 1">
+                        <div class="card-body">
+                            <h5 class="card-title">The Silent Reader</h5>
+                            <p class="card-text text-muted">By Jane Doe</p>
+                            <p class="text-success fw-bold">$14.99</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+                        </div>
+                    </div>
                 </div>
+
+                <!-- Slide 2 -->
+                <div class="swiper-slide">
+                    <div class="card book-card shadow-sm">
+                        <img src="assets/img2.jpg" class="card-img-top" alt="Book 2">
+                        <div class="card-body">
+                            <h5 class="card-title">Code & Coffee</h5>
+                            <p class="card-text text-muted">By John Smith</p>
+                            <p class="text-success fw-bold">$19.99</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+
+                <!-- Slide 3 -->
+                <div class="swiper-slide">
+                    <div class="card book-card shadow-sm">
+                        <img src="assets/img3.jpg" class="card-img-top" alt="Book 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Mystery in the Rain</h5>
+                            <p class="card-text text-muted">By Emma Lee</p>
+                            <p class="text-success fw-bold">$11.99</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card book-card shadow-sm">
+                        <img src="assets/img3.jpg" class="card-img-top" alt="Book 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Mystery in the Rain</h5>
+                            <p class="card-text text-muted">By Emma Lee</p>
+                            <p class="text-success fw-bold">$11.99</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <div class="swiper-slide">
+                    <div class="card book-card shadow-sm">
+                        <img src="assets/img3.jpg" class="card-img-top" alt="Book 3">
+                        <div class="card-body">
+                            <h5 class="card-title">Mystery in the Rain</h5>
+                            <p class="card-text text-muted">By Emma Lee</p>
+                            <p class="text-success fw-bold">$11.99</p>
+                            <a href="#" class="btn btn-outline-primary w-100">Add to Cart</a>
+                        </div>
+                    </div>
+                </div>
+                <!-- Add more .swiper-slide items here -->
+
             </div>
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-palette feature-icon mb-2"></i>
-                    <h5>CSS Styling</h5>
-                    <p class="text-muted">Make your websites visually appealing with styles and layouts.</p>
-                </div>
+
+            <!-- Navigation Buttons -->
+            <div class="swiper-button-next"></div>
+            <div class="swiper-button-prev"></div>
+
+            <!-- Pagination Dots -->
+            <div class="swiper-pagination"></div>
+        </div>
+    </section>
+    <section class="container my-5 ">
+        <div class="about-section row align-items-center">
+            <div class="col-md-6 mb-4 mb-md-0">
+                <img src="assets/about.jfif" alt="Reading Books" class=" rounded shadow " style="width:500px;" />
             </div>
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-bootstrap feature-icon mb-2"></i>
-                    <h5>Bootstrap 5</h5>
-                    <p class="text-muted">Quickly build responsive designs using Bootstrap components.</p>
-                </div>
+            <div class="col-md-6">
+                <h2 class="mb-4">About Book Haven</h2>
+                <p class="lead">
+                    At Book Haven, we believe every book tells a story beyond its pages...
+                </p>
+                <p>
+                    With thousands of titles and personalized recommendations...
+                </p>
+                <a href="about.html" class="btn btn-light mt-3">Learn More</a>
             </div>
         </div>
     </section>
 
-    <!-- CN Features -->
-    <section class="container my-5">
-        <h3 class="text-center">Computer Networks Topics</h3>
-        <div class="row g-4">
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-diagram-3 feature-icon mb-2"></i>
-                    <h5>OSI Model</h5>
-                    <p class="text-muted">Learn the 7 layers of the OSI model and their responsibilities.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-router feature-icon mb-2"></i>
-                    <h5>Networking Devices</h5>
-                    <p class="text-muted">Understand switches, routers, hubs, bridges and more.</p>
-                </div>
-            </div>
-            <div class="col-md-4">
-                <div class="card border-0 shadow-sm text-center p-3">
-                    <i class="bi bi-ethernet feature-icon mb-2"></i>
-                    <h5>IP Addressing</h5>
-                    <p class="text-muted">Explore IPv4 & IPv6, subnetting, and IP classification.</p>
-                </div>
+
+
+
+    <!-- Footer -->
+    <footer class="footer text-center">
+        <div class="container">
+            <p class="mb-2">&copy; 2025 BookNext. All rights reserved.</p>
+            <div>
+                <a href="#" class="text-white me-3"><i class="fab fa-facebook"></i></a>
+                <a href="#" class="text-white me-3"><i class="fab fa-twitter"></i></a>
+                <a href="#" class="text-white"><i class="fab fa-instagram"></i></a>
             </div>
         </div>
-    </section>
-<footer>
-    <div class="py-5 bg-dark"></div>
-</footer>
-   
+    </footer>
 
-    <!-- Bootstrap Bundle -->
+    <!-- Bootstrap JS Bundle -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
-
 </body>
+<script>
+    const swiper = new Swiper('.mySwiper', {
+        loop: true,
+        grabCursor: true,
+        spaceBetween: 30,
+        centeredSlides: true,
+        autoplay: {
+            delay: 4000,
+            disableOnInteraction: false,
+        },
+        slidesPerView: 1,
+        pagination: {
+            el: '.swiper-pagination',
+            clickable: true,
+        },
+        navigation: {
+            nextEl: '.swiper-button-next',
+            prevEl: '.swiper-button-prev',
+        },
+        breakpoints: {
+            768: {
+                slidesPerView: 2,
+            },
+            992: {
+                slidesPerView: 3,
+            }
+        }
+    });
+</script>
+
 
 </html>
