--- a/experiment.html
+++ b/experiment.html
@@ -120,12 +120,13 @@
             </li>
             <li class="list-group-item d-flex justify-content-between align-items-center">
                 Experiment 3: JavaScript Events
-                <button class="btn btn-primary btn-sm">View</button>
+                <button class="btn btn-primary btn-sm" onclick="location.href='EXPERIMENT_3/form.html'">View</button>
             </li>
           
         </ul>
     </div>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
+
 
 </html>
